[package]
name = "valence_editor"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bincode = "1.3.3"
serde = "1.0.203"
valence = { git = "https://github.com/valence-rs/valence" }
valence_vstruc = { git = "https://github.com/EliiasG/valence_vstruc" }